--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,16 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    h1 Chat với người lạ
+        button#btn-new.btn.btn-info Tìm người chat
+    #wrapper
+        #content
+
+        #status Sẵn sàng, bấm nút <strong>Tìm người chat</strong> để bắt đầu
+        #control
+            #chat-input
+                textarea#txt-input.form-control
+            #chat-control
+                button#btn-submit.btn.btn-block.btn-success
+                    | Gửi&nbsp;
+                    i.fa.fa-send
