--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,14 @@
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+    head
+        title= title
+        link(rel="stylesheet", href="/vendors/bootstrap/css/bootstrap.min.css")
+        link(rel="stylesheet", href="/vendors/bootstrap/css/bootstrap-theme.min.css")
+        link(rel="stylesheet", href="/vendors/font-awesome/css/font-awesome.min.css")
+        link(rel='stylesheet', href='/css/style.css')
+    body
+        block content
+        script(type="text/javascript", src="/vendors/jquery/jquery-1.11.1.min.js")
+        script(type="text/javascript", src="/vendors/bootstrap/js/bootstrap.min.js")
+        script(type="text/javascript", src="/js/socket.io.js")
+        script(type="text/javascript", src="/js/main.js")
