--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,23 +6,9 @@ html
         link(rel="stylesheet", href="/vendors/bootstrap/css/bootstrap-theme.min.css")
         link(rel="stylesheet", href="/vendors/font-awesome/css/font-awesome.min.css")
         link(rel='stylesheet', href='/css/style.css')
+
+        block head
     body
-        script(type="text/javascript").
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-18780047-13', 'nhatkycuocsong.com');
-            ga('send', 'pageview');
-
         block content
         script(type="text/javascript", src="/vendors/jquery/jquery-1.11.1.min.js")
         script(type="text/javascript", src="/vendors/bootstrap/js/bootstrap.min.js")
