--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,7 @@ block content
         #content
 
         #status Sẵn sàng, bấm nút <strong>Tìm người chat</strong> để bắt đầu
+        #online
         #control
             #chat-input
                 textarea#txt-input.form-control
