Thêm số người online cho NKCS

--- a/views/chat.nhatkycuocsong.com/index.jade
+++ b/views/chat.nhatkycuocsong.com/index.jade
@@ -23,6 +23,7 @@ block content
     #wrapper
         #content
         #status Sẵn sàng, bấm nút <strong>Tìm người chat</strong> để bắt đầu
+        #online
         #control
             #chat-input
                 textarea#txt-input.form-control
