--- a/views/chatvivu.com/index.jade
+++ b/views/chatvivu.com/index.jade
@@ -4,12 +4,12 @@ block content
     h1
         span.hidden-xs Chat với người lạ
         button#btn-new.btn.btn-info Tìm người chat
-        span.visible-xs.online
+        span.visible-xs.online#online-title
     #wrapper
         #content
 
         #status Sẵn sàng, bấm nút <strong>Tìm người chat</strong> để bắt đầu
-        .online.hidden-xs
+        .online.hidden-xs#online-status
         #control
             #chat-input
                 textarea#txt-input.form-control
