Fix online style

--- a/views/chatvivu.com/index.jade
+++ b/views/chatvivu.com/index.jade
@@ -4,7 +4,7 @@ block content
     h1
         span.hidden-xs Chat với người lạ
         button#btn-new.btn.btn-info Tìm người chat
-        span.visible-xs.online#online-title
+        div.visible-xs.online.btn.btn-warning#online-title
     #wrapper
         #content
 
