--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,11 +2,12 @@ h1 {
     height: 30px;
     line-height: 30px;
     padding-left: 10px
+    margin: 5px 0 0 0;
 }
 
 #wrapper {
     position: absolute;
-    top: 60px;
+    top: 40px;
     left: 10px;
     right: 10px;
     bottom: 10px;
