--- a/views/chat.nhatkycuocsong.com/index.jade
+++ b/views/chat.nhatkycuocsong.com/index.jade
@@ -1,5 +1,5 @@
 extends layout
-block header
+block head
     script(type="text/javascript").
         (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
