Ẩn box tin tức trên mobile

--- a/public/css/nkcs.css
+++ b/public/css/nkcs.css
@@ -7,3 +7,9 @@
     border: 1px solid #ccc;
     background: #fff;
 }
+
+@media (max-width: 767px) {
+    #list-news {
+        display: none;
+    }
+}
