--- a/views/chatvivu.com/layout.jade
+++ b/views/chatvivu.com/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html
     head
         title ChatVivu - Chat với người lạ
-        meta(name="viewport", content="width=device-width, initial-scale=1")
+        meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(charset="utf-8")
         meta(name="description", content="Chat với người lạ, nói chuyện với người lạ, gặp gỡ người lạ")
